--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "git": "^0.1.5",
     "lodash": "^4.17.21",
     "mongoose": "^8.7.3"
   }
