--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "git": "^0.1.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.7.3"
+    "mailtrap": "^3.4.0",
+    "mongoose": "^8.7.3",
+    "nodemailer": "^6.9.16"
   }
 }
