--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-async-handler": "^1.2.0",
     "git": "^0.1.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
